librewolf: fix custom css warning

--- a/.librewolf/librewolf.overrides.cfg
+++ b/.librewolf/librewolf.overrides.cfg
@@ -23,6 +23,9 @@ defaultPref("browser.urlbar.suggest.topsites", false);
 defaultPref("browser.urlbar.suggest.calculator", true);
 defaultPref("browser.urlbar.unitConversion.enabled", true);
 
+// Required for custom CSS
+defaultPref("svg.context-properties.content.enabled", true);
+
 // Add .lan as a TLD
 defaultPref("browser.fixup.domainsuffixwhitelist.lan", true);
 
