--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -19,9 +19,9 @@ auth {
 
 background {
   color = rgba(181818FF)
-  # path = screenshot
-  # blur_size = 15
-  # blur_passes = 4
+  path = screenshot
+  blur_size = 15
+  blur_passes = 4
 }
 
 input-field {
