hyprlock: don't hide cursor

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -6,7 +6,7 @@ $font_family = Adwaita
 $font_family_clock = Adwaita
 
 general {
-  hide_cursor = true
+  hide_cursor = false
   ignore_empty_input = true
 }
 
