--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -17,6 +17,14 @@ auth {
   }
 }
 
+animations {
+  enabled = true
+  bezier = linear, 1, 1, 0, 0
+  animation = fadeIn, 1, 5, linear
+  animation = fadeOut, 1, 5, linear
+  animation = inputFieldDots, 1, 2, linear
+}
+
 background {
   color = rgba(181818FF)
   path = screenshot
