hyprlock: enable pam module

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -11,6 +11,10 @@ general {
 }
 
 auth {
+  pam {
+    enabled = true
+    module = hyprlock
+  }
   fingerprint {
     enabled = true
     retry_delay = 250
