--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,9 @@
-# Disable primary clipboard
-copy_on_select no
-mouse_map middle release grabbed,ungrabbed no_op
-mouse_map shift+middle release grabbed,ungrabbed no_op
-map shift+insert no_op
-
+# Window dimensions
 remember_window_size no
 initial_window_width 900
 initial_window_height 650
 
+# Window padding
 window_padding_width 4
 
 # Disable audible bell
@@ -18,17 +14,6 @@ window_alert_on_bell no
 
 # Disable quit confirmation prompt
 confirm_os_window_close 0
-
-# Tab bar
-tab_bar_style separator
-tab_separator "┇"
-# tab_bar_background #999
-# active_tab_foreground   #000
-# active_tab_background   #eee
-active_tab_font_style   normal
-# inactive_tab_foreground #444
-# inactive_tab_background #999
-inactive_tab_font_style normal
 
 # Font family
 font_family Noto Sans Mono
@@ -61,6 +46,11 @@ map ctrl+shift+h show_scrollback
 map ctrl+shift+equal change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 map ctrl+shift+0 change_font_size all 0
+
+# Disable primary clipboard
+copy_on_select no
+mouse_map middle release grabbed,ungrabbed no_op
+mouse_map shift+middle release grabbed,ungrabbed no_op
 
 include theme.conf
 background_opacity 0.9
