kitty: speed up scrolling with touchpad

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -31,6 +31,9 @@ shell_integration disabled
 # Disable default hotkeys
 clear_all_shortcuts yes
 
+# Make scrolling with touchpad faster
+touch_scroll_multiplier 6.0
+
 # Hotkey: reload config
 map ctrl+shift+f5 load_config_file
 
