env: force GTK programs to use the ngl renderer

--- a/.config/environment.d/gtk.conf
+++ b/.config/environment.d/gtk.conf
@@ -1,2 +1,6 @@
 GTK2_RC_FILES=/usr/share/themes/Adwaita-dark/gtk-2.0/gtkrc
 GTK_CSD=0
+
+# The vulkan renderer unnecessarily wakes up the dGPU when the
+# iGPU is selected.
+GSK_RENDERER=ngl
