kitty: add paste mapping for ctrl+shift+delete

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,6 +41,7 @@ map ctrl+shift+f5 load_config_file
 map ctrl+shift+c copy_to_clipboard
 map ctrl+shift+v paste_from_clipboard
 map shift+insert paste_from_clipboard
+map ctrl+shift+delete paste_from_clipboard
 
 # Hotkey: scrollback
 map ctrl+shift+h show_scrollback
