waybar: save brightness changes

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -129,8 +129,8 @@
     "device": "intel_backlight",
     "format": "{icon} {percent}%",
     "format-icons": ["󰃞", "󰃟", "󰃠"],
-    "on-scroll-up": "brightnessctl set 8+",
-    "on-scroll-down": "brightnessctl set 8-",
+    "on-scroll-up": "brightnessctl -s set 8+",
+    "on-scroll-down": "brightnessctl -s set 8-",
     "smooth-scrolling-threshold": 1.0,
     "tooltip": false,
     "min-length": 6,
