waybar: simplify network module

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -119,14 +119,11 @@
       "wifi": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
       "disabled": "󰤮",
     },
+    "format": "",
     "format-wifi": "{icon} {essid}",
-    "format-ethernet": "",
-    "format-disconnected": "",
     "format-disabled": "{icon}",
     "tooltip-format": "",
     "tooltip-format-wifi": "Signal: {signaldBm} dBm ({signalStrength}%)\nFrequency: {frequency} GHz",
-    "tooltip-format-ethernet": "",
-    "tooltip-format-disconnected": "",
     "tooltip-format-disabled": "Disabled",
   },
 
