--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -22,6 +22,7 @@
     "power-profiles-daemon",
     "battery",
     "network",
+    "bluetooth",
     "backlight",
     "pulseaudio",
     "pulseaudio#microphone",
@@ -125,6 +126,23 @@
     "tooltip-format": "",
     "tooltip-format-wifi": "Signal: {signaldBm} dBm ({signalStrength}%)\nFrequency: {frequency} GHz",
     "tooltip-format-disabled": "Disabled",
+  },
+
+  "bluetooth": {
+    "format": "",
+    "format-no-controller": "",
+    "format-disabled": "",
+    "format-off": "󰂲",
+    "format-on": "",
+    "format-connected": " {device_alias}",
+    "format-connected-battery": "{icon} {device_alias}",
+    "format-icons": {
+      "default": ["󰤾", "󰤿", "󰥀", "󰥁", "󰥂", "󰥃", "󰥄", "󰥅", "󰥆", "󰥈"],
+    },
+    "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+    "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
+    "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+    "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
   },
 
   "backlight": {
