--- a/.config/environment.d/xdg.conf
+++ b/.config/environment.d/xdg.conf
@@ -1,3 +1,6 @@
+# xcompose
+XCOMPOSEFILE="${XDG_CONFIG_HOME:-${HOME}/.config}/xcompose"
+
 # node
 NODE_REPL_HISTORY="${XDG_DATA_HOME:-${HOME}/.local/share}/node_repl_history"
 
