--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -147,7 +147,7 @@
   "bluetooth": {
     "format": "",
     "format-no-controller": "",
-    "format-disabled": "",
+    "format-disabled": "󰂲",
     "format-off": "󰂲",
     "format-on": "",
     "format-connected": " {device_alias}",
@@ -156,6 +156,9 @@
       "default": ["󰤾", "󰤿", "󰥀", "󰥁", "󰥂", "󰥃", "󰥄", "󰥅", "󰥆", "󰥈"],
     },
     "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
+    "tooltip-format-disabled": "Disabled",
+    "tooltip-format-off": "Powered off",
+    "tooltip-format-no-controller": "No controller",
     "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
     "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
     "tooltip-format-enumerate-connected-battery": "{device_alias}\t{device_address}\t{device_battery_percentage}%",
